--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.2",
     "gulp-util": "^3.0.8",
+    "three": "^0.104.0",
     "vinyl-source-stream": "^2.0.0"
   }
 }
